--- a/Capitulo2/marco_teorico.tex
+++ b/Capitulo2/marco_teorico.tex
@@ -334,9 +334,38 @@ V\approx 2nV-\frac{2n^{3}}{3fC}
 Es por ello que mediante un análisis matemático debemos de hacer el calculo de la respectiva $\delta$ del mismo.\\
 No solamente la calidad de la salida depende de lo antes mencionado, ya que, para un correcto funcionamiento necesitamos realizar un sistema de entrada estable y constante. De aquí el siguiente estudio.
 \newpage
-\section{Transformadores de alto voltaje.}
+\section{Aplicaciones de fuentes de alto voltaje .}
 
 Los transformadores de alto voltaje son utilizados ampliamente en sistemas tanto industriales, médicos como de investigación. Una de estas tantas aplicaciones son los sistemas de ignición, ya que, por el alto voltaje que tenemos en el secundario se producen arcos eléctricos en situaciones controladas, que pueden servir para ignición de combustoleos. En el área de la medicina también se utiliza de manera importante en sistemas de generación de ozono, rayos X, entre tantas otras cosas mas.  \\
+\subsection{Fusión nuclear}
+
+Es aquella en la que se unen dos núcleos ligeros para formar otro más pesado. Este proceso genera energía porque el peso del núcleo resultante es menor que la suma de los pesos de los núcleos más ligeros. Esta diferencia en las masas, llamado defecto de masa o energía de amarre, se transforma en energía mediante la fórmula de Einstein , donde m es la diferencia de masa observada en el sistema antes y después de la fusión y es la velocidad de la luz (300.000 km/s). Aunque el defecto de masa es muy pequeño, es una energía muy concentrada ya que en un gramo de materia hay millones de átomos, con lo que una pequeña cantidad de combustible proporcionaría una cantidad grande de energía.\\
+
+Este tipo de reacciones es la que tiene lugar en el interior de las estrellas, proporcionándoles su brillo y su producción energética. En la escala terrestre, los experimentos realizados sobre fusión nuclear enfrentan un problema de primer orden: la dificultad de controlar las enormes cantidades de energía que se producen en el proceso.
+
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=12cm]{capitulo3/figs/fusi.png}
+\caption{ Proceso de fusión nuclear.}
+\end{figure}
+
+La fusión nuclear es un proceso del que potencialmente se puede obtener energía a gran escala y que puede ser muy útil para cubrir el esperado aumento de demanda de energía a nivel mundial. Sus principales ventajas respecto a otros tipos de fuentes energéticas son:\\
+
+Los combustibles primarios son baratos, abundantes, no radioactivos y repartidos geográficamente de manera uniforme (el agua de los lagos y los océanos contiene hidrógeno pesado suficiente para millones de años, al ritmo actual de consumo de energía).\\
+
+Sistema intrínsecamente seguro: el reactor sólo contiene el combustible necesario para los diez segundos siguientes de operación. Además el medio ambiente no sufre ninguna agresión: no hay contaminación atmosférica que provoque la “lluvia ácida” o el “efecto invernadero”.\\
+
+La radiactividad de la estructura del reactor, producida por los neutrones emitidos en las reacciones de fusión, puede ser minimizada escogiendo cuidadosamente materiales de baja activación. Por tanto, no es preciso almacenar los elementos del reactor durante cientos o miles de años.\\ \cite{fusion}
+
+Existen diferentes tipos de metodos para lograr fusion nuclear. Uno de los mas utilizados por cientificos afisionados al tema es el llamado Fusor Farnsworth \cite{fusor}, el cual se emplea una técnica denominada confinamiento electrostático. En este aparato se emplean técnicas de vacío, alto voltaje, detección de neutrones y manejo de gases. Su nivel de peligrosidad es grande. Este es uno de los proyectos mas ambiciosos que un aficionado puede acometer ya que supone el dominio de unas técnicas solo accesibles a aficionados bastante experimentados.
+
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=12cm]{capitulo3/figs/fusor.png}
+\caption{ Fusor nuclear.}
+\end{figure}
 
 \subsection{Sistemas de encendido.}
 
@@ -410,4 +439,5 @@ Los electrones se dirigen al ánodo y chocan contra una barra de tungsteno. Cuan
 \end{figure}
 
 Las aplicaciones de estos tubos de rayos x son bastas y han sido un gran avance tecnológico para la humanidad. La generación de rayos x mediante voltaje tiene sus pros y sus contras respecto a generación de rayos x por isotopos radiactivos, ya que los tubos de rayos x pueden ser apagados cuando el equipo no esta operando, en cambio el isotopo radiactivo estará permanentemente irradiando, perdiendo intensidad con el pasar del tiempo.  \\
+
 
