--- a/tesis.tex
+++ b/tesis.tex
@@ -141,6 +141,10 @@ Doctor Ingeniero Industrial \url{http://personales.unican.es/rodrigma/PDFs/Trafo
 \bibitem{ignicion}``ANÁLISIS DE INSTALACIÓN Y OPERACIÓN DE UN
 SISTEMA DE ENCENDIDO SIN DISTRIBUIDOR (DIS)'' \url{https://repositorio.espe.edu.ec/bitstream/21000/3995/1/T-ESPEL-0212.pdf}
 
+\bibitem{fusor}University of Utah Marriott Library Special Collections. Archived from the original on 2013-10-21. Retrieved 2007-07-05. \url{https://wayback.archive-it.org/all/20131021170353/http://content.lib.utah.edu/cdm/ref/collection/UU_EAD/id/2160}
+
+\bibitem{fusion}FUSIÓN NUCLEAR. \url{http://www.inin.gob.mx/temasdeinteres/fusionnuclear.cfm}
+
 
 
 \end{thebibliography}
