--- a/Capitulo5/conclusiones.tex
+++ b/Capitulo5/conclusiones.tex
@@ -1,4 +1,2 @@
 \chapter{Conclusiones}
-\blindtext
-
-\Blindtext
+Se logro la construccion satisfactoria de una fuente de alto voltaje controlada digitalmente mediante un computador y de forma manual mediante un microcontrolador integrado. Los voltajes alcanzados fueron mas de 2KV con una potencia de hasta 40W y un riso en el orden de micro volts.
