--- a/Capitulo1/introduccion.tex
+++ b/Capitulo1/introduccion.tex
@@ -20,9 +20,7 @@
 
 \chapter{Resumen} % section headings are printed smaller than chapter names
 
-El trabajo de esta tesis consiste en el desarrollo de una fuente de alto voltaje de bajo ruido para su uso en equipo científico de alta precisión, mediante la utilización  de un sistema de inversor de voltaje y un rectificador del tipo multiplicador, Cockcroft–Walton, así como también la introducción a un control del sistema con lazo cerrado e interfaces gráficas para el usuario.\\
-
-Durante el desarrollo del sistema de alto voltaje se realizo el diseño, la simulación, la fabricación y la validación de los datos proporcionados por el sistema.\\
+El trabajo de esta tesis consiste en el desarrollo de una fuente de alto voltaje de bajo ruido para su uso en equipo científico de alta precisión, mediante la utilización  de un sistema de inversor de voltaje y un rectificador del tipo multiplicador, Cockcroft–Walton, así como también la introducción a un control del sistema con lazo cerrado e interfaces gráficas para el usuario. Durante el desarrollo del sistema de alto voltaje se realizo el diseño, la simulación, la fabricación y la validación de los datos proporcionados por el sistema.\\
 
 Obteniendo como resultado un sistema de bajo costo, el cual puede generar alto voltaje a 10w de potencia, obteniendo una comparación entre fuentes de alto voltaje comerciales implementadas en aceleradores de partículas y reactores nucleares de baja potencia. \\
 
